[gd_scene load_steps=2 format=3 uid="uid://vs38hxd3cm0b"]

[ext_resource type="Script" path="res://ui/multiplayer/lobby_name_popup.gd" id="1_53fub"]

[node name="LobbyNamePopup" type="Panel"]
custom_minimum_size = Vector2(550, 200)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -91.0
offset_bottom = 91.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_53fub")

[node name="Title" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 46.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 24
text = "Popup Title"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LobbyIDLineEdit" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -209.0
offset_top = -23.0
offset_right = 209.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
placeholder_text = "enter lobby ID"
alignment = 1
max_length = 36
caret_blink = true

[node name="SubmitButton" type="Button" parent="."]
unique_name_in_owner = true
custom_minimum_size = Vector2(100, 50)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -19.0
offset_top = -50.0
offset_right = 19.0
offset_bottom = -19.0
grow_horizontal = 2
grow_vertical = 0
text = "Submit"

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(30, 30)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -42.0
offset_top = 11.0
offset_right = -12.0
offset_bottom = 42.0
grow_horizontal = 0
text = "X"

[connection signal="text_changed" from="LobbyIDLineEdit" to="." method="_on_lobby_id_line_edit_text_changed"]
[connection signal="pressed" from="SubmitButton" to="." method="_on_submit_button_pressed"]
[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
